margin in textbox fixed and text now wraps inside the text-box

--- a/styles/partials/_phone.scss
+++ b/styles/partials/_phone.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     height: calc(100vh - 132px);
-
+    
     @include tablet {
       padding: 2rem 0;
     }
@@ -66,6 +66,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin: 10px 0;
   &__form {
     display: flex;
     padding: 1rem;
@@ -90,11 +91,13 @@
   &__user-text,
   &__kanye-text {
     display: inline-block;
+    max-width: 100%;
+    overflow-wrap: break-word;
     border: transparent 1px solid;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 6px;
     padding: 0.5rem;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
     color: #000;
     font-size: 0.75rem;
   }
