--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,6 +87,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin: 10px 0;
 }
 .chat-box__form {
   display: flex;
@@ -109,11 +110,13 @@ main {
 }
 .chat-box__user-text, .chat-box__kanye-text {
   display: inline-block;
+  max-width: 100%;
+  overflow-wrap: break-word;
   border: transparent 1px solid;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   padding: 0.5rem;
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   color: #000;
   font-size: 0.75rem;
 }
